# DEBUG_cognome-

./: .gitignore  AGENTS.md  README.md  WFC.md
db/: TODO.md  core.sql.gz.sha256  english.sql.gz.sha256  fic_entities.sql.gz.sha256  hcp_fic_pbm.sql.gz.sha256  hcp_nf_entities.sql.gz.sha256  var.sql.gz.sha256
db/migrations/: 017_pronoun_i_exception.sql  018_particle_key_special_chars.sql  019_frequency_rank.sql  020_position_modifiers.sql  021_activity_envelopes.sql  022_var_sources_rename.sql  024_variant_cleanup.sql
docs/: TODO.md  brief-lmdb-vocab-compilation.md  db-specialist-consultation.md  db-to-engine-feedback-request.md  engine-response-lmdb-vocab.md  engine-to-db-feedback-response.md  questions-for-db-specialist.md  roadmap.md  scene-pipeline-plan.md  status.md
docs/design/: byte-resolution-design.md  concept-forces.md  discord-relay.md
hcp-engine/: TODO.md  hcp-engine.service
hcp-engine/Gem/: CMakeLists.txt  hcpengine_files.cmake  hcpengine_workstation_files.cmake
hcp-engine/Gem/Source/: HCPCacheMissResolver.cpp  HCPCacheMissResolver.h  HCPDbConnection.cpp  HCPDbUtils.h  HCPEngineSystemComponent.cpp  HCPEngineSystemComponent.h  HCPEntityAnnotator.cpp  HCPEntityAnnotator.h  HCPHtmlFormatBuilder.cpp  HCPHtmlFormatBuilder.h  HCPResolutionChamber.cpp  HCPResolutionChamber.h  HCPSocketServer.cpp  HCPStorage.cpp  HCPStorage.h  HCPSuperpositionTrial.cpp  HCPTokenizer.cpp  HCPTokenizer.h  HCPVocabBed.cpp  HCPVocabBed.h  HCPVocabulary.cpp  HCPVocabulary.h  HCPWordSuperpositionTrial.cpp  HCPWordSuperpositionTrial.h
hcp-engine/Gem/Source/Workstation/: HCPSocketClient.cpp  HCPSocketClient.h  HCPWorkstationEngine.cpp  HCPWorkstationEngine.h  HCPWorkstationWindow.cpp  HCPWorkstationWindow.h  main.cpp
scripts/: TODO.md  run_benchmark.py
src/hcp/core/hardware/: portgnome.cpp
